# OpenIPCA

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  SPEC_Dashboard_IPCA (1).md  methodology.md  pyproject.toml  requirements.txt  spec_V3.md
.github/workflows/: publish-release-report.yml  reconcile-data.yml  refresh-ai-artifacts.yml  refresh-data.yml  tests.yml
.streamlit/: config.toml  secrets.toml.example
config/: alert_rules.yaml  chart_theme.yaml  core_sets.yaml  ipca_reference.yaml  series_sgs.yaml  sidra_7060.yaml
dashboard/: app.py
data/processed/: alerts.parquet  bcb_series_monthly.parquet  core_metrics_monthly.parquet  ipca_items_monthly.parquet
outputs/: diagnostic_latest.json  release_state.json  validation_report.csv
reports/latest/: ai_brief.md  ai_trace.json  metadata.json
reports/qa/: replay.json
scripts/: check_no_secrets.py  eval_qa_live.py  probe_ipca_release.py
src/ipca_dashboard/: __init__.py  _http.py  alerts.py  audit.py  buildinfo.py  charts.py  config.py  diagnostics.py  fetch_bcb.py  fetch_ibge.py  glossary.py  hierarchy.py  io.py  navigation.py  pipeline.py  regime.py  release.py  transforms.py  validation.py
src/ipca_dashboard/ai/: __init__.py  brief.py  cli.py  config.py  env.py  evidence.py  guardrails.py  qa.py  qa_deterministic.py  qa_replay.py  reference.py  schemas.py  staleness.py  tools.py  trace.py
src/ipca_dashboard/ai/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  no_ai.py  openai_provider.py  registry.py
src/ipca_dashboard/reporting/: __init__.py  build_report.py  render_markdown.py  render_static_charts.py
tests/: qa_eval_cases.py  test_ai_brief.py  test_ai_contract.py  test_alerts.py  test_anthropic_provider.py  test_app_no_nested_expander.py  test_audit.py  test_buildinfo.py  test_charts.py  test_check_no_secrets.py  test_cores.py  test_data_automation.py  test_diagnostics.py  test_diffusion.py  test_env_loader.py  test_evidence_display.py  test_fetch_ibge.py  test_gemini_provider.py  test_glossary.py  test_hierarchy.py  test_http.py  test_item_changes.py  test_item_search.py  test_item_weights.py  test_navigation.py  test_openai_provider.py  test_pipeline.py  test_provider_directives.py  test_qa.py  test_qa_eval.py  test_qa_replay.py  test_reference.py  test_regime.py  test_release.py  test_reporting.py  test_seasonal_adjustment.py  test_secrets_bridge.py  test_sgs_history.py  test_staleness.py  test_streamlit_app_pages.py  (+4 more)
