[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipca-dashboard"
version = "0.1.0"
description = "Dashboard macro de IPCA com decomposicao, nucleos, difusao e alertas."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.22",
  "pyarrow>=15.0",
  "PyYAML>=6.0",
  "requests>=2.31",
  "streamlit==1.44.1",  # pinned: injected CSS depends on Streamlit's internal DOM
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
# Optional AI providers (BYOK). Not in CI; the app works fully without these.
# The app is model-agnostic — this extra just makes one hosted provider available.
# python-dotenv autoloads a local .env for BYOK convenience (best-effort).
ai = [
  "openai>=1.0",
  "anthropic>=0.39",
  # Gemini is called over its REST API with `requests` (a core dep) — no SDK.
  "python-dotenv>=1.0",
]
# Static PNG export for the shareable report. Local/manual only — NOT in CI
# (kaleido is heavy/flaky there); the Markdown report builds without it.
report = [
  "kaleido>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "ai_contract: AI Tool API / evidence / guardrail contract tests (no network)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

